{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 32,
  "lineage": "e70cdecd-57da-87c8-fcfb-35b6a801fec1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-031aa5d94febad76c",
            "owner_id": "123871167802",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01662e65b106d853e",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031aa5d94febad76c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5dda237ae5963ac",
            "route_table_id": "rtb-01662e65b106d853e",
            "subnet_id": "subnet-0c14c226d9ad99cd5"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0542e5390e5d30a4f",
            "route_table_id": "rtb-01662e65b106d853e",
            "subnet_id": "subnet-041f3665ee6d338fd"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d2c3b30fa9a650a",
            "route_table_id": "rtb-01662e65b106d853e",
            "subnet_id": "subnet-07d1fc30d4ed1ebd3"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:security-group/sg-0fb82b305760f9dac",
            "description": "This security group allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb82b305760f9dac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "123871167802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0d4cbb8b4c0a956f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d4cbb8b4c0a956f4",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0f362d4fd3a30f327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0f362d4fd3a30f327",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0170b6082ad771e43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0170b6082ad771e43",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0c14c226d9ad99cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c14c226d9ad99cd5",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-041f3665ee6d338fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-041f3665ee6d338fd",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-07d1fc30d4ed1ebd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07d1fc30d4ed1ebd3",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-001f98a28f16d14db"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "GamingServerVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:vpc/vpc-001f98a28f16d14db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fb672a22f6e7ef4",
            "default_route_table_id": "rtb-0436760a56d253525",
            "default_security_group_id": "sg-05f5ad618d5f42b48",
            "dhcp_options_id": "dopt-70442608",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001f98a28f16d14db",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0436760a56d253525",
            "owner_id": "123871167802",
            "tags": {
              "Name": "GamingServerVPC"
            }
          }
        }
      ]
    }
  ]
}